--- a/01_intro_to_R.Rmd
+++ b/01_intro_to_R.Rmd
@@ -1,2 +1,17 @@
 # Введение в R
 
+## Типы данных
+
+## Переменные
+
+## Пакеты
+
+## Чтение файлов
+
+## Манипуляция с данными
+
+### `filter()`
+### `count()`
+### `mutate()`
+### `group_by() %>% summarise()`
+### `group_by() %>% mutate()`
