--- a/03_working_with_maps.Rmd
+++ b/03_working_with_maps.Rmd
@@ -43,7 +43,7 @@ df %>%
 Мы можем раскрасить наши точки на основании пола:
 
 ```{r}
-pal_cat <- colorFactor("Set3", domain = df$gender)
+pal_gender <- colorFactor("Set1", domain = df$gender)
 df %>% 
   filter(place == "SDB") %>% 
   leaflet() %>% 
@@ -54,8 +54,8 @@ df %>%
              radius = 2,
              fillOpacity = 1, 
              label = ~tombstone_code,
-             color  = ~pal_cat(gender)) %>% 
-  addLegend(pal = pal_cat,
+             color  = ~pal_gender(gender)) %>% 
+  addLegend(pal = pal_gender,
             values = ~gender,
             title = "")
 ```
@@ -74,13 +74,13 @@ df %>%
              radius = 2,
              fillOpacity = 1, 
              label = ~tombstone_code,
-             color  = ~pal_cat(gender)) %>% 
-  addLegend(pal = pal_cat,
+             color  = ~pal_gender(gender)) %>% 
+  addLegend(pal = pal_gender,
             values = ~gender,
             title = "")
 ```
 
-Попробуем нарисовать другое
+Попробуем нарисовать надгробия с кладбища в Бешенковичах:
 
 ```{r}
 df %>% 
@@ -94,13 +94,71 @@ df %>%
              radius = 2,
              fillOpacity = 1, 
              label = ~tombstone_code,
-             color  = ~pal_cat(gender)) %>% 
-  addLegend(pal = pal_cat,
+             color  = ~pal_gender(gender)) %>% 
+  addLegend(pal = pal_gender,
             values = ~gender,
             title = "")
 ```
 
 
+Попробуем нарисовать кладбище в Бешенковичах и посмотрим, где расположены надгробия с тегами роженица:
 
-* левиты, коэны
-* роженицы в BSH
+```{r}
+df %>% 
+  mutate(labour = str_detect(tags, "роды"),
+         labour = ifelse(is.na(labour), FALSE, labour)) ->
+  df
+
+pal_labour <- colorFactor("Set1", domain = df$labour)
+
+df %>%   
+  filter(place == "BSH",
+         !is.na(labour)) %>% 
+  leaflet() %>% 
+  addTiles() %>% 
+  addCircles(lng = ~longitude,
+             lat = ~latitude,
+             stroke = NA, 
+             radius = 2,
+             fillOpacity = 1, 
+             label = ~tombstone_code,
+             color  = ~pal_labour(labour)) %>% 
+  addLegend(pal = pal_labour,
+            values = ~labour,
+            title = "Распределение рожениц")
+```
+
+
+Попробуем нарисовать кладбище в Бешенковичах и посмотрим, как оно заполнялось:
+
+```{r}
+df %>%   
+  filter(place == "BSH",
+         !is.na(just_year_gre)) %>% 
+  group_by(tombstone_code) %>% 
+  mutate(id = 1:n()) %>% 
+  filter(id == 1) %>% 
+  ungroup() %>% 
+  mutate(value = 1) %>% 
+  arrange(-just_year_gre) %>% 
+  pivot_wider(names_from = just_year_gre, values_from = value, values_fill = 0) %>% 
+  pivot_longer(values_to = "value", names_to = "just_year_gre", `1772`:`1968`) %>% 
+  group_by(tombstone_code, id) %>% 
+  mutate(value = cumsum(value)) ->
+  bsh_sum
+
+library(leaflet.minicharts)
+  
+leaflet() %>% 
+  addTiles() %>% 
+  addLegend(pal = pal_gender,
+            values = bsh_sum$gender,
+            title = "") %>% 
+  addMinicharts(lng = bsh_sum$longitude,
+                lat = bsh_sum$latitude,
+                chartdata = bsh_sum$value,
+                time = as.double(bsh_sum$just_year_gre), 
+                fillColor = pal_gender(bsh_sum$gender),
+                width = 7)
+```
+
