small corrections to dataset

--- a/index.Rmd
+++ b/index.Rmd
@@ -13,10 +13,39 @@ biblio-style: apalike
 
 Это материалы школы по цифровой эпиграфике 2021.
 
-Пакеты:
+## Пререквезиты
+
+Мы будем использовать R [@r_core_team19], так что для двух ближайших занятий понадобятся:
+
+* R
+    * [на Windows](https://cran.r-project.org/bin/windows/base/)
+    * [на Mac](https://cran.r-project.org/bin/macosx/)
+    * [на Linux](https://cran.rstudio.com/bin/linux/), также можно добавить зеркало и установить из командной строки:
+    
+```
+sudo apt-get install r-cran-base
+```
+
+* RStudio --- IDE для R ([можно скачать здесь](https://www.rstudio.com/products/rstudio/download/))
+* и некоторые пакеты на R
+
+Часто можно увидеть или услышать, что R --- язык программирования для "статистической обработки данных". Изначально это, конечно, было правдой, но уже давно R --- это полноценный язык программирования, который при помощи своих пакетов позволяет решать огромный спектр задач. В данной книге используется следующая версия R:
+
+```{r, echo = FALSE}
+sessionInfo()$R.version$version.string
+```
+
+Некоторые люди не любят устанавливать лишние программы себе на компьютер, несколько вариантов есть и для них:
+
+* [RStudio cloud](https://rstudio.cloud/) --- полная функциональность RStudio, пока бесплатная, но скоро это исправят;
+* [RStudio on rollApp](https://www.rollapp.com/app/rstudio) --- облачная среда, позволяющая разворачивать программы.
+
+Первый и вполне закономерный вопрос: зачем мы ставили R и отдельно еще какой-то RStudio?
+Если опустить незначительные детали, то R --- это сам язык программирования, а RStudio --- это среда (IDE), которая позволяет в этом языке очень удобно работать.
+
+
+Также надо будет установить слудующие пакеты:
 
 ```{r, eval = FALSE}
-install.packages(c("dplyr",
-                   "ggplot2", 
-                   "leaflet"))
+install.packages(c("tidyverse", "leaflet", "leaflet.minicharts"))
 ```
