--- a/02_data_visualisation.Rmd
+++ b/02_data_visualisation.Rmd
@@ -194,12 +194,6 @@ df %>%
   select(tombstone_code, name, fathers_name, just_year_gre) %>% 
   pivot_longer(names_to = "type", values_to = "name", name:fathers_name) %>% 
   mutate(name = str_split(name, " ")) %>% 
-  unnest_longer(name) %>% 
-  arrange(name) ->
-  names_dataset
-
-names_dataset %>% 
-  arrange(names())
-
+  unnest_longer(name) 
 ```
 
