small corrections to ggplot chapter

--- a/02_data_visualisation.Rmd
+++ b/02_data_visualisation.Rmd
@@ -99,8 +99,8 @@ df %>%
 
 Ну что же настал момент, когда можно остановиться и осмыслить то, что мы видим:
 
-* мужских надгробий больше чем женских;
-* в Стародубе больше надгробий, из которых нельзя извлечь информацию про пол усопшего, чем в Мглине.
+* мужских надгробий больше чем женских (видите исключение?);
+* в Стародубе больше надгробий, из которых нельзя извлечь информацию про пол усопшего, чем в Рашкове и Бешенковичах.
 
 ```{block, type = "rmdtask"}
 Попробуйте воспроизвести график распределения типов надгробий.
