--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ sudo apt-get install r-cran-base
 * RStudio --- IDE для R ([можно скачать здесь](https://www.rstudio.com/products/rstudio/download/))
 * и некоторые пакеты на R
 
-Часто можно увидеть или услышать, что R --- язык программирования для "статистической обработки данных". Изначально это, конечно, было правдой, но уже давно R --- это полноценный язык программирования, который при помощи своих пакетов позволяет решать огромный спектр задач. В данной книге используется следующая версия R:
+Часто можно увидеть или услышать, что R --- язык программирования для "статистической обработки данных". Изначально это, конечно, было правдой, но уже давно R --- это полноценный язык программирования, который при помощи своих пакетов позволяет решать огромный спектр задач. В данных материалах используется следующая версия R:
 
 ```{r, echo = FALSE}
 sessionInfo()$R.version$version.string
@@ -37,7 +37,7 @@ sessionInfo()$R.version$version.string
 
 Некоторые люди не любят устанавливать лишние программы себе на компьютер, несколько вариантов есть и для них:
 
-* [RStudio cloud](https://rstudio.cloud/) --- полная функциональность RStudio, пока бесплатная, но скоро это исправят;
+* [RStudio cloud](https://rstudio.cloud/) --- полная функциональность RStudio, есть бесплатный план;
 * [RStudio on rollApp](https://www.rollapp.com/app/rstudio) --- облачная среда, позволяющая разворачивать программы.
 
 Первый и вполне закономерный вопрос: зачем мы ставили R и отдельно еще какой-то RStudio?
