--- a/01_intro_to_R.Rmd
+++ b/01_intro_to_R.Rmd
@@ -1,17 +1,142 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 # Введение в R
 
-## Типы данных
+## Основы
+### Типы данных
 
-## Переменные
+В R есть несколько типов данных, которые нам будут важны на наших занятиях:
 
-## Пакеты
+* числа
 
-## Чтение файлов
+```{r}
+5
+8.23
+```
 
-## Манипуляция с данными
+* строки
 
-### `filter()`
-### `count()`
-### `mutate()`
-### `group_by() %>% summarise()`
-### `group_by() %>% mutate()`
+```{r}
+"hi"
+"тро-ло-ло"
+"שלום"
+```
+
+Важно отметить, что числа также могут быть строкой: `"5"`.
+
+* логические операторы
+
+```{r}
+TRUE
+FALSE
+```
+
+
+* пропущенные значения
+
+```{r}
+NA
+```
+
+Набор значений можно объединить в единицу, которая называется вектор:
+
+```{r}
+с(4, 9)
+с("first name", "фамилия")
+```
+
+### Переменные
+
+Любое значение можно записать в переменную. Для этого используется оператор присваивания `<-` (горячие клавиши `Alt + -` позволяют быстро вставить оператор):
+
+```{r}
+x <- 2021
+x
+
+y <- c("имя", "last name")
+```
+
+Переменные можно спользовать в манипуляциях:
+
+```{r}
+x+3
+```
+
+Однако она останется не изменной, пока мы не сделаем новое присваивание:
+
+```{r}
+x
+x <- x+3
+x
+```
+
+### Функции
+
+Любые действия в R происходят при помощи функций:
+
+```{r}
+x <- c(1, 3, 5, 7)
+mean(x)
+cumsum(x)
+```
+
+### Пакеты
+
+Большая часть преимуществ R находится в его пакетах --- наборах функций. Сегодня мы будем использовать пакет `tidyverse`, а завтра пакеты `leaflet` и `leaflet.minicharts`. Первое что имеет смысл сделать, это научиться устанавливать пакеты:
+
+```{r, eval = FALSE}
+install.packages(c("tidyverse", "leaflet", "leaflet.minicharts"))
+```
+
+R может попросить при первой установке выбрать зеркало -- это не особенно важно, можете выбрать любое. Перед использованием пакета его нужно включить:
+
+```{r}
+library(tidyverse)
+```
+
+Пакет выдал какое-то сообщение: такое бывает, самое важное? Главное что не выдал ошибки.
+
+## Введение в `tidyverse`
+
+В R существуют свои поддиалекты: есть базовый R, есть `tidyverse`, есть `data.table`. В этих материалах мы будем работать с `tidyverse`.
+
+### Чтение файлов
+
+Люди придумали достаточно много способов хранить табличные данные (мы будем смотреть только на такие данные). Всем известны таблицы из Excel/LibreOffice/Numbers и самые распространенные форматы `.xls` и `.xlsx`, c которыми можно работать в R при помощи пакетов `readxl` и  `writexl`. На наших занятиях мы рассмотрим более простой формат, с которым предпочитают работать при анализе данных --- `.csv`. Этот формат предполагает использование как машинно-, так и человеко-читаемый формат, в котором значения разделяются некоторым разделителем. Чаще всего в качестве разделителя используют запятую (поэтому `.csv` расшифровывается как *comma separated values*).
+
+
+```{r}
+df <- read_csv("https://tinyurl.com/yzfgony9")
+df
+```
+
+В нашем датасете следующие переменные:
+
+* tombstone_code --- код надгробия (`BSH0106a`)
+* place --- место (`Бешенковичи`)
+* tombstone_id --- уникальный номер надгробия (`106`)
+* latitude --- 
+* longitude
+* last_name
+* name
+* fathers_name
+* gender
+* year
+* tags
+* epitaph_language
+* decor_type
+* tombstone_type
+* tombstone_material_code
+* source_ru
+* source_en
+
+### Манипуляция с данными
+
+#### `filter()`
+#### `count()`
+#### `mutate()`
+#### `group_by() %>% summarise()`
+#### `group_by() %>% mutate()`
